Fixing visibility issues on tracker app

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -261,6 +261,12 @@
   margin-bottom:5px;
 }
 
+.round-button{
+  border-radius: 64px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .item-card-entry-form{
   border: 1px solid #E6E6E7;
   border-radius: 0.3rem;
