--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -52,6 +52,7 @@ $searchbar-md-input-background-color :#ffffff;
 $colors: (
   primary:    #488aff,
   secondary:  #5CB85C,
+  border-color: #E6E6E7,
   danger:     #f53d3d,
   light:      #f4f4f4,
   font-color: #7A7A7A,
